Working guacamole without reverse proxy

--- a/reverseproxy/config/nginx.conf
+++ b/reverseproxy/config/nginx.conf
@@ -7,7 +7,7 @@ events {
 http {
     upstream guacamole {
         ip_hash;
-        server guacamole_guacamole:8080;
+        server guacamole:8080;
     }
 
     server {
