--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,23 +9,23 @@ services:
         environment: 
             - POSTGRES_PASSWORD
             - POSTGRES_USER
-            - POSTGRES_DB
+            - POSTGRES_DATABASE=${POSTGRES_DB}
+            - POSTGRES_HOSTNAME=postgres
+            - POSTGRES_PORT=5432
+            - GUACD_HOSTNAME=guacd
+            - GUACD_PORT=4822
         depends_on: 
             - postgres
             - guacd
         networks:
-            back: 
-                aliases:
-                    - guacamole
+            - back
     guacd:
         image: guacamole/guacd:latest
         restart: always
         logging:
             driver: json-file
         networks:
-            back: 
-                aliases:
-                    - guacd
+            - back
     reverse_proxy:
         image: nginx:1.13-alpine
         restart: always
@@ -49,9 +49,7 @@ services:
             - POSTGRES_USER
             - POSTGRES_DB
         networks:
-            back: 
-                aliases:
-                    - postgres
+            - back
         volumes:
             - guacamole_db:/var/lib/postgresql/data
             
