--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,10 @@ services:
         image: nginx:1.13-alpine
         restart: always
         volumes:
-            - ./reverseproxy/config:/etc/nginx:rw
-            - ./reverseproxy/ssl:/etc/ssl
+            # - ./reverseproxy/config:/etc/nginx:rw
+            # - ./reverseproxy/ssl:/etc/ssl
+            - /e/Projekte/guacamole_docker/reverseproxy/config:/etc/nginx:rw
+            - /e/Projekte/guacamole_docker/reverseproxy/ssl:/etc/ssl
         ports:
             - "443:443"
         depends_on:
@@ -53,7 +55,6 @@ services:
         volumes:
             - guacamole_db:/var/lib/postgresql/data
             
-
 networks:
     front:
         driver: bridge
@@ -62,3 +63,5 @@ networks:
     
 volumes:
     guacamole_db:
+    # nginx_certs:
+    # nginx_config:
